k8s-manifests/memcached/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6
          ports:
            - containerPort: 11211
