k8s-manifests/memcached/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: memcached
spec:
  type: ClusterIP
  selector:
    app: memcached
  ports:
    - port: 11211
      targetPort: 11211
