k8s-manifests/memcached/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-only
  namespace: memcached
spec:
  podSelector:
    matchLabels:
      app: memcached
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: backend
      ports:
        - protocol: TCP
          port: 11211
